--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>AngularJS ES6 Starter-Kit</title>
+	<title>Pendu Game</title>
 	<base href="/">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
